Attempt to update to MC 1.21.4
It mostly work but there is still bugs that I don't know how to start fixing